re-aligned changed file structures and names, only need to fix personalenlightenment images to be correct size

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -114,7 +114,7 @@ color:#776413;
 
 /* HOLISTIC WELLNESS ------------------------------ */
 
-#philoSpiritImg{
+.bodyImage{
     object-fit:cover;
     object-position: 50% 50%;
     height:500px;
